# fluxd-rust

./: .gitignore  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
contrib/systemd/: fluxd.service
fluxd_rust/: Cargo.toml  README.md  ROADMAP.md
fluxd_rust/crates/chainstate/: Cargo.toml
fluxd_rust/crates/chainstate/src/: address_deltas.rs  address_index.rs  anchors.rs  filemeta.rs  flatfiles.rs  index.rs  lib.rs  metrics.rs  shielded.rs  spentindex.rs  state.rs  txindex.rs  undo.rs  utxo.rs  validation.rs
fluxd_rust/crates/chainstate/tests/: address_index.rs  reorg_fork.rs  tx_index.rs
fluxd_rust/crates/consensus/src/: constants.rs  lib.rs  money.rs  params.rs  rewards.rs  upgrades.rs
fluxd_rust/crates/fluxnode/: Cargo.toml
fluxd_rust/crates/fluxnode/src/: cache.rs  storage.rs  validation.rs
fluxd_rust/crates/log/src/: lib.rs
fluxd_rust/crates/node/: Cargo.toml
fluxd_rust/crates/node/src/: dashboard.rs  db_info.rs  fee_estimator.rs  main.rs  mempool.rs  p2p.rs  p2p_server.rs  peer_book.rs  rpc.rs  stats.rs  tui.rs  tx_relay.rs  verify_chain.rs  wallet.rs
fluxd_rust/crates/pon/src/: slot.rs  validation.rs
fluxd_rust/crates/pow/src/: lib.rs  (+4 more)
fluxd_rust/crates/primitives/: Cargo.toml
fluxd_rust/crates/script/: Cargo.toml
fluxd_rust/crates/shielded/: Cargo.toml
fluxd_rust/crates/shielded/src/: lib.rs  params.rs  verify.rs
fluxd_rust/crates/storage/: Cargo.toml
fluxd_rust/docs/: ARCHITECTURE.md  CONFIGURATION.md  INDEXES.md  OPERATIONS.md  QUICKSTART.md  README.md  RPC.md  RPC_PARITY.md  TELEMETRY.md  TROUBLESHOOTING.md  TUI.md
fluxd_rust/scripts/: remote_smoke_test.sh  shielded_wallet_smoke_test.sh
(+21 files in other folders)
